Try dumping threads differently.